Added Manage Interest

--- a/IRL.Web/Views/Contact/Index.cshtml
+++ b/IRL.Web/Views/Contact/Index.cshtml
@@ -4,17 +4,12 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
-@*<div class="alert alert-success fade in" role="alert">
-    @ViewBag.SaveResult
-    <button type="button" class="close" data-dismiss="alert">
-        <span>&times;</span>
-    </button>
-</div>*@
+<h2>Contacts</h2>
 
 <p>
     @Html.ActionLink("Add Contact", "Create", "Contact")
+    @Html.ActionLink("Manage Interests", "Index", "Interest")
+
 </p>
 
 @if (TempData.ContainsKey("SaveResult"))
@@ -30,6 +25,9 @@
 <table class="table">
     <tr>
         <th>
+        @Html.DisplayNameFor(model => model.ContactId)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.FirstName)
         </th>
         <th>
@@ -40,6 +38,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.ContactId)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.FirstName)
         </td>
