--- a/IRL.Web/Views/Contact/Delete.cshtml
+++ b/IRL.Web/Views/Contact/Delete.cshtml
@@ -1,23 +1,21 @@
 ﻿@model IRL.Models.ContactDetail
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Delete";
 }
 
-<h2>
-   @Html.DisplayFor(model => model.FullName) 
-</h2>
+<h2>Delete</h2>
 
-<div>
-    @*<h4>ContactDetailModel</h4>*@
+<h3>Are you sure you want to delete @Html.DisplayFor(model => model.FullName)?</h3>
+@*<div>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
+            @Html.DisplayNameFor(model => model.ContactId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FirstName)
+            @Html.DisplayFor(model => model.ContactId)
         </dd>
 
         <dt>
@@ -26,6 +24,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.LastName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FirstName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FirstName)
         </dd>
 
         <dt>
@@ -67,9 +73,15 @@
         <dd>
             @Html.DisplayFor(model => model.CreatedUtc)
         </dd>
-    </dl>
+
+    </dl>*@
+<div>
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ContactId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
