--- a/IRL.Web/Views/Interest/Index.cshtml
+++ b/IRL.Web/Views/Interest/Index.cshtml
@@ -4,36 +4,64 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Your Interests</h2>
 
 @*<p>
-    @Html.ActionLink("Create New", "Create")
-</p>*@
+        @Html.ActionLink("Create New", "Create")
+    </p>*@
 <table class="table">
     @*<tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Item)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsSelected)
-        </th>
-        <th></th>
-    </tr>*@
+            <th>
+                @Html.DisplayNameFor(model => model.Item)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsSelected)
+            </th>
+            <th></th>
+        </tr>*@
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Item)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsSelected)
-        </td>
-        @*<td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.InterestId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.InterestId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.InterestId })
-        </td>*@
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Item)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsSelected, new { Id = item.InterestId })
+            </td>
+            @*<td>
+                    @Html.ActionLink("Edit", "Edit", new { id=item.InterestId }) |
+                    @Html.ActionLink("Details", "Details", new { id=item.InterestId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id=item.InterestId })
+                </td>*@
+        </tr>
+    }
 
 </table>
+
+@section scripts {
+    <script language="javascript" type="text/javascript">
+        $(document).ready(function () {
+            $("i[data-toggle='star']")
+                .css({ "cursor": "pointer" })
+                .click(function (e) {
+                    var target = $(e.target);
+                    var interestId = target.attr("data-id");
+                    var starSet = target.hasClass("glyphicon-star");
+
+                    $.ajax({
+                        method: starSet ? "DELETE" : "POST",
+                        url: "/api/interests/" + interestId + "/star",
+                        data: null
+                    })
+                        .done(function (r) {
+                            target.removeClass();
+                            target.addClass("glyphicon " + (starSet ? "glyphicon-star-empty" : "glyphicon-star"));
+                        })
+                        .fail(function (r) {
+                            alert("Failed to change our stars");
+                        });
+                });
+        });
+    </script>
+}
