--- a/IRL.Web/Views/Interest/Index.cshtml
+++ b/IRL.Web/Views/Interest/Index.cshtml
@@ -9,53 +9,61 @@
 @*<p>
         @Html.ActionLink("Create New", "Create")
     </p>*@
-<table class="table">
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Item)
-                </td>
-                <td>
-                    @Html.ActionLink("Add Interest", "Select", new { interestId = item.InterestId })
-                </td>
-            </tr>
-        }
-    }
-</table>
-<div class="select">
-    <div class="col-md-offset-2 col-md-10">
-        <input type="submit" value="Select" class="btn btn-default" />
+
+@if (TempData.ContainsKey("SaveResult"))
+{
+    <div class="alert alert-success fade in" role="alert">
+        <button type="button" class="close" data-dismiss="alert">
+            <span>&times;</span>
+        </button>
+        @TempData["SaveResult"]
     </div>
-</div>
+}
+<table class="table">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Item)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Add Interest", "Select", new { interestId = item.InterestId }, new { item = item.Item })
+                    </td>
+                </tr>
+            }
+        }
+    </table>
+    <div>
+        @Html.ActionLink("Back", "Home")
+    </div>
 
 
-@*@section scripts {
-        <script language="javascript" type="text/javascript">
-            $(document).ready(function () {
-                $("i[data-toggle='star']")
-                    .css({ "cursor": "pointer" })
-                    .click(function (e) {
-                        var target = $(e.target);
-                        var interestId = target.attr("data-id");
-                        var starSet = target.hasClass("glyphicon-star");
+    @*@section scripts {
+            <script language="javascript" type="text/javascript">
+                $(document).ready(function () {
+                    $("i[data-toggle='star']")
+                        .css({ "cursor": "pointer" })
+                        .click(function (e) {
+                            var target = $(e.target);
+                            var interestId = target.attr("data-id");
+                            var starSet = target.hasClass("glyphicon-star");
 
-                        $.ajax({
-                            method: starSet ? "DELETE" : "POST",
-                            url: "/api/interests/" + interestId + "/star",
-                            data: null
-                        })
-                            .done(function (r) {
-                                target.removeClass();
-                                target.addClass("glyphicon " + (starSet ? "glyphicon-star-empty" : "glyphicon-star"));
+                            $.ajax({
+                                method: starSet ? "DELETE" : "POST",
+                                url: "/api/interests/" + interestId + "/star",
+                                data: null
                             })
-                            .fail(function (r) {
-                                alert("Failed to change our stars");
-                            });
-                    });
-            });
-        </script>
-    }*@
+                                .done(function (r) {
+                                    target.removeClass();
+                                    target.addClass("glyphicon " + (starSet ? "glyphicon-star-empty" : "glyphicon-star"));
+                                })
+                                .fail(function (r) {
+                                    alert("Failed to change our stars");
+                                });
+                        });
+                });
+            </script>
+        }*@
