--- a/IRL.Web/Views/Home/Index.cshtml
+++ b/IRL.Web/Views/Home/Index.cshtml
@@ -13,6 +13,9 @@
         <p class="emptyPost">
             <input type="text" />
         </p>
+        <div class="postButton">
+             <button type="button" class="btn btn-outline-secondary">post</button>
+        </div>
     </div>
     <div class="postBox">
         <div class="profpic">
